      and :meth:`~passlib.ifc.PasswordHash.needs_update` methods.  This allows much more flexibility
      when using a hash directly, rather than via CryptContext, as well making it easier for
      CryptContext to support hash-specific parameters.

    * :func:`~passlib.utils.consteq` is now an alias for stdlib's :func:`hmac.compare_digest`
      under python 3.3 and up.

Deprecations
------------
    Passlib 1.7 has undergone a large number of deprecations, as part of a long range plan
    to restructure and simplify both the API and the internals of Passlib 2.0.  There will be
    at least one more major release (1.8 or 1.9) before Passlib 2.0 is released.

    * The :class:`~passlib.ifc.PasswordHash` API (used by all hashes in passlib),
      has had a number of cleanups made:

        * :meth:`!encrypt` has been renamed to :meth:`~passlib.ifc.PasswordHash.hash`,
          to clarify that it's performing one-way hashing rather than encryption.
          A compatibility alias will remain in place until Passlib 2.0.
          This should fix the longstanding :issue:`21`.

        * The little-used methods :meth:`~passlib.ifc.PasswordHash.genhash` and
          :meth:`~passlib.ifc.PasswordHash.genconfig` have been deprecated.
          Compatibility aliases will remain in place until Passlib 2.0.

        * Settings options like ``rounds`` and ``salt_size`` should no longer be passed to
          :meth:`!hash`. Instead, callers should use the new :meth:`~passlib.ifc.PasswordHash.using`
          method: for example, ``sha256_crypt.hash("secret", rounds=12345)`` should now be
          ``sha256_crypt.using(rounds=12345).hash("secret")``.  Support for the old method
          will be removed in Passlib 2.0.

    * The :class:`~passlib.context.CryptContext` object has a number of cleanups made:

        * :meth:`!encrypt` was renamed to :meth:`!hash` to match the
          :class:`~passlib.ifc.PasswordHash` API changes listed above.
